ferritin/src/snapshots/ferritin__tests__get_union_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestUnion\"), OutputMode :: Tty,\n& get_fixture_crate_path ())"
---
Item: TestUnion
Kind: Union
Visibility: Public
Defined at: [fixture_crate](https://docs.rs/fixture-crate/0.1.0/fixture_crate/index.html)::[TestUnion](https://docs.rs/fixture-crate/0.1.0/fixture_crate/union.TestUnion.html)
In crate: fixture-crate (0.1.0)

A union for testing union formatting.

Demonstrates a union with public and private fields, a generic parameter, and
an inherent method — the union counterpart to [TestStruct](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html).

union TestUnion<T: [Copy](https://doc.rust-lang.org/nightly/core/marker/trait.Copy.html)> {
    pub as_int: u64,
    pub as_float: f64,
    private: T,
}

Fields:

  ◦ as_int: u64
    The integer view

  ◦ as_float: f64
    The floating-point view

  ◦ private: T
    A private generic field

Methods

  ◦ pub fn [from_int](https://docs.rs/fixture-crate/0.1.0/fixture_crate/union.TestUnion.html#method.from_int)(as_int: u64) -> Self
    Construct a TestUnion from its integer view.

Trait Implementations

std: [From](https://doc.rust-lang.org/nightly/core/convert/index.html?search=core%3A%3Aconvert%3A%3AFrom)<Self>

  ◦ impl [Any](https://doc.rust-lang.org/nightly/core/any/trait.Any.html) where Self: 'static + ?[Sized](https://doc.rust-lang.org/nightly/core/marker/trait.Sized.html)

  ◦ impl [Borrow](https://doc.rust-lang.org/nightly/core/borrow/trait.Borrow.html)<Self> where Self: ?[Sized](https://doc.rust-lang.org/nightly/core/marker/trait.Sized.html)

  ◦ impl [BorrowMut](https://doc.rust-lang.org/nightly/core/borrow/trait.BorrowMut.html)<Self> where Self: ?[Sized](https://doc.rust-lang.org/nightly/core/marker/trait.Sized.html)

  ◦ impl<T: [Freeze](https://doc.rust-lang.org/nightly/core/marker/trait.Freeze.html)> [Freeze](https://doc.rust-lang.org/nightly/core/marker/trait.Freeze.html)

  ◦ impl<U: [From](https://doc.rust-lang.org/nightly/core/convert/trait.From.html)<Self>> [Into](https://doc.rust-lang.org/nightly/core/convert/trait.Into.html)<U>

  ◦ impl<T: [RefUnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.RefUnwindSafe.html)> [RefUnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.RefUnwindSafe.html)

  ◦ impl<T: [Send](https://doc.rust-lang.org/nightly/core/marker/trait.Send.html)> [Send](https://doc.rust-lang.org/nightly/core/marker/trait.Send.html)

  ◦ impl<T: [Sync](https://doc.rust-lang.org/nightly/core/marker/trait.Sync.html)> [Sync](https://doc.rust-lang.org/nightly/core/marker/trait.Sync.html)

  ◦ impl<U: [Into](https://doc.rust-lang.org/nightly/core/convert/trait.Into.html)<Self>> [TryFrom](https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html)<U>
        type Error = [Infallible](https://doc.rust-lang.org/nightly/core/convert/type.Infallible.html)

  ◦ impl<U: [TryFrom](https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html)<Self>> [TryInto](https://doc.rust-lang.org/nightly/core/convert/trait.TryInto.html)<U>
        type Error = <U as [TryFrom](https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html)<Self>>::Error

  ◦ impl<T: [Unpin](https://doc.rust-lang.org/nightly/core/marker/trait.Unpin.html)> [Unpin](https://doc.rust-lang.org/nightly/core/marker/trait.Unpin.html)

  ◦ impl<T: [UnsafeUnpin](https://doc.rust-lang.org/nightly/core/marker/trait.UnsafeUnpin.html)> [UnsafeUnpin](https://doc.rust-lang.org/nightly/core/marker/trait.UnsafeUnpin.html)

  ◦ impl<T: [UnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.UnwindSafe.html)> [UnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.UnwindSafe.html)
