ferritin/src/snapshots/ferritin__tests__list_crates_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::list(), & get_fixture_crate_path ())"
---
{
  "crates": [
    {
      "name": "alloc",
      "version": "1.101.0-nightly",
      "description": "The Rust core allocation and collections library"
    },
    {
      "name": "core",
      "version": "1.101.0-nightly",
      "description": "The Rust Core Library"
    },
    {
      "name": "fixture-crate",
      "version": "0.1.0",
      "isDefault": true,
      "isWorkspace": true,
      "description": "this is the crate description"
    },
    {
      "name": "proc_macro",
      "version": "1.101.0-nightly",
      "description": "A support library for macro authors when defining new macros"
    },
    {
      "name": "std",
      "version": "1.101.0-nightly",
      "description": "The Rust Standard Library"
    },
    {
      "name": "test",
      "version": "1.101.0-nightly",
      "description": "Support code for rustc's built in unit-test and micro-benchmarking framework"
    }
  ]
}
