ferritin/src/snapshots/ferritin__tests__list_crates_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::list(), OutputMode :: TestMode, &\nget_fixture_crate_path ())"
---
<title>Available crates:</title>
<list>
  <item><p>
<strong>alloc</strong>  1.101.0-nightly
    The Rust core allocation and collections library</p>
</item>
  <item><p>
<strong>core</strong>  1.101.0-nightly
    The Rust Core Library</p>
</item>
  <item><p>
<strong>fixture-crate</strong>  (workspace-local, aliased as <strong>crate</strong>)
    this is the crate description</p>
</item>
  <item><p>
<strong>proc_macro</strong>  1.101.0-nightly
    A support library for macro authors when defining new macros</p>
</item>
  <item><p>
<strong>std</strong>  1.101.0-nightly
    The Rust Standard Library</p>
</item>
  <item><p>
<strong>test</strong>  1.101.0-nightly
    Support code for rustc's built in unit-test and micro-benchmarking framework</p>
</item>
</list>
