ferritin/src/snapshots/ferritin__tests__nonexistent_item_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::DoesNotExist\"), OutputMode ::\nAgent, & get_fixture_crate_path ())"
---
Could not find 'crate::DoesNotExist'

Did you mean:

- crate::TestUnion
- crate::TestEnum
- crate::prefix_tests
- crate::ComplexTrait
- crate::markdown_test
