ferritin/src/snapshots/ferritin__tests__nonexistent_item_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::DoesNotExist\"), OutputMode ::\nAi, & get_fixture_crate_path ())"
---
Could not find 'crate::DoesNotExist'

Did you mean:

- crate::submodule
- crate::link_resolution_tests
- crate::reexport_mod
- crate::markdown_test
- crate::namespace_collisions
